edit style add first toolbar

--- a/views/map.html
+++ b/views/map.html
@@ -1,3 +1,58 @@
 <div layout="row" layout-fill>
     
+    <!--small screen xs-->
+    <div layout="column" layout-fill ng-cloak>
+        <md-content>
+            
+        <md-toolbar  class="" md-scroll-shrink>
+      <div class="md-toolbar-tools" layout="row">
+        <md-button class="md-icon-button" aria-label="Settings">
+          <md-icon><img src="https://maxcdn.icons8.com/Color/PNG/24/Business/currency_exchange-24.png" title="Currency Exchange" width="24"></md-icon>
+        </md-button>
+        <h5>
+          <span>Where Exchange Money</span>
+        </h5>
+      </div>
+            <div class="md-toolbar-tools md-toolbar-tools-bottom padding0" layout="row" layout-align="space-between center">
+            <div layout="row" flex layout-align="center center">
+                <md-input-container class="margin0">
+        <label ng-hide="selectFrom.length > 0">From</label>
+        <md-select flex ng-model="selectedFrom">
+          <md-optgroup label="From">
+            <md-option ng-value="item" ng-repeat="item in items">
+                <div layout="row" layout-align="center center">
+                <img src="https://maxcdn.icons8.com/Color/PNG/24/Ecommerce/turkish_lira-24.png" title="Turkish Lira" width="24">
+                    <span><h5 class="margin0">Item {{item}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+            </div>
+            <div>
+            <md-button md-no-ink class="md-icon-button" aria-label="Swap">
+        <md-icon><img src="https://maxcdn.icons8.com/iOS7/PNG/25/Network/data_in_both_directions-25.png" title="Data in Both Directions" width="25"></md-icon>
+      </md-button> 
+                </div>
+            <div layout="row" flex layout-align="center center">
+                <md-input-container class="margin0">
+        <label ng-hide="selectTo.length > 0">To</label>
+        <md-select flex ng-model="selectedTo">
+          <md-optgroup label="To">
+            <md-option ng-value="item" ng-repeat="item in items">
+                <div layout="row" layout-align="center center">
+                <img src="https://maxcdn.icons8.com/Color/PNG/24/Ecommerce/turkish_lira-24.png" title="Turkish Lira" width="24">
+                    <span><h5 class="margin0">Item {{item}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+            </div>
+      </div>
+    </md-toolbar>
+ 
+            </md-content>
+    </div>
+    
 </div>
