--- a/views/map.html
+++ b/views/map.html
@@ -1,4 +1,136 @@
-<div layout="row" layout-fill>
+
+<div hide-xs hide-sm layout="column" ng-cloak style="height:100%;width:320px;">
+        <md-toolbar  class="" style="min-width:320px;max-width:480px;">
+      <div class="md-toolbar-tools" layout="row">
+        <md-button class="md-icon-button" aria-label="Settings">
+          <md-icon><img src="https://maxcdn.icons8.com/Color/PNG/24/Business/currency_exchange-24.png" title="Currency Exchange" width="24"></md-icon>
+        </md-button>
+        <h4>
+          <span>Where Exchange Money</span>
+        </h4>
+      </div>
+      
+    </md-toolbar>
+     <md-subheader class="md-primary" style="width:320px;" >
+          <div class="md-toolbar-tools md-toolbar-tools-bottom padding0" layout="row" layout-align="space-between center">
+            <div layout="row" flex layout-align="center center">
+                <md-input-container ng-show="buying" class="margin0" ng-class="{'animated fadeIn': buying}">
+        <label ng-hide="selectedFrom != ''">From</label>
+        <md-select flex ng-model="selectedFrom">
+          <md-optgroup label="From">
+            <md-option ng-value="currencyFrom" ng-repeat="currencyFrom in exchangeFrom">
+                <div layout="row" layout-align="center center">
+                <img ng-src="{{currencyFrom.icon}}" title="{{currencyFrom.name}}" width="24">
+                    <span><h5 class="margin0">{{currencyFrom.name}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+      <md-input-container ng-show="!buying" class="margin0" ng-class="{'animated fadeIn': !buying}">
+        <label ng-hide="selectedTo != ''">To</label>
+        <md-select flex ng-model="selectedTo">
+          <md-optgroup label="To">
+            <md-option ng-value="currencyTo" ng-repeat="currencyTo in exchangeTo">
+                <div layout="row" layout-align="center center">
+                <img ng-src="{{currencyTo.icon}}" title="{{currencyTo.name}}" width="24">
+                    <span><h5 class="margin0">{{currencyTo.name}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+            </div>
+            <div>
+                <md-button aria-label="Swap" class="md-primary margin0 padding0" style="min-width:40px;" ng-click="buying = !buying" ng-class="{'animated rotateIn': buying, 'animated rubberBand': !buying}">
+            <md-icon> <img src="https://maxcdn.icons8.com/iOS7/PNG/25/Network/data_in_both_directions-25.png" title="Data in Both Directions" width="25"></md-icon>
+          </md-button>
+                </div>
+            <div layout="row" flex layout-align="center center">
+                <md-input-container ng-show="buying" class="margin0" ng-class="{'animated fadeIn': buying}">
+        <label ng-hide="selectedTo != ''">To</label>
+        <md-select flex ng-model="selectedTo">
+          <md-optgroup label="To">
+            <md-option ng-value="currencyTo" ng-repeat="currencyTo in exchangeTo">
+                <div layout="row" layout-align="center center">
+                <img ng-src="{{currencyTo.icon}}" title="{{currencyTo.name}}" width="24">
+                    <span><h5 class="margin0">{{currencyTo.name}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+      <md-input-container ng-show="!buying" class="margin0" ng-class="{'animated fadeIn': !buying}">
+        <label ng-hide="selectedFrom != ''">From</label>
+        <md-select flex ng-model="selectedFrom">
+          <md-optgroup label="From">
+            <md-option ng-value="currencyFrom" ng-repeat="currencyFrom in exchangeFrom">
+                <div layout="row" layout-align="center center">
+                <img ng-src="{{currencyFrom.icon}}" title="{{currencyFrom.name}}" width="24">
+                    <span><h5 class="margin0">{{currencyFrom.name}}</h5></span>
+                </div>
+                </md-option>
+          </md-optgroup>
+        </md-select>
+      </md-input-container>
+            </div>
+      </div>
+          </md-subheader>        
+        <md-content layout="row" layout-align="start start">
+        <div layout="column" layout-fill style="width:320px;">    
+
+   
+ 
+ 
+        <section>
+      
+      <md-list>
+        <md-list-item md-ink-ripple class="md-3-line animated fadeIn" ng-repeat="shop in shops" style="padding: 0 8px;">
+            <div flex="100" class="padding-top8" layout="row" layout-align="space-between center">
+            <img ng-src="{{shop.icon}}" title="Shop" width="48" class="md-avatar" style="margin-right:8px;">
+            <div flex class="md-list-item-text">
+              <h3>{{shop.name}}</h3>
+              <!--<h4>{{message}}</h4>-->
+              <p>
+                12.5 km | {{shop.fee}}
+              </p>
+            </div>
+            <div  style="width:110px;">
+            <div class="md-list-item-text" ng-show="buying" ng-class="{'animated fadeIn': buying}" layout="column" layout-align="center center">
+              <h5 class="margin0">Buying Rate</h5>
+              <h2 class="margin0 mdc-text-teal">{{exchangeRates[shop.id].rate.buying | number:2}}</h2>
+              <p>
+                {{selectedFrom.name}} / 1 {{selectedTo.name}}
+              </p>
+            </div>
+            <div class="md-list-item-text" ng-show="!buying" ng-class="{'animated fadeIn': !buying}" layout="column" layout-align="center center">
+              <h5 class="margin0">Selling Rate</h5>
+              <h2 class="margin0 mdc-text-red">{{exchangeRates[shop.id].rate.selling | number:2}}</h2>
+              <p>
+                {{selectedFrom.name}} / 1 {{selectedTo.name}}
+              </p>
+            </div>
+            </div>
+            </div>
+        </md-list-item>
+      </md-list>
+    </section>
+ 
+ 
+        </div>
+            </md-content>
+    </div>
+    <div hide-xs hide-sm flex>ABC</div>
+
+    
+    
+    
+    
+    
+    
+    
+    
+<div hide-gt-sm layout="row" layout-fill>
     
     <!--small screen xs-->
     <div hide-gt-sm layout="column" layout-fill ng-cloak>
@@ -84,7 +216,8 @@
           </md-subheader>
       <md-list>
         <md-list-item md-ink-ripple class="md-3-line animated fadeIn" ng-repeat="shop in shops" style="padding: 0 8px;">
-            <div flex="100" layout="row" layout-align="space-between center">
+            <div flex="100" layout="row" layout-align="center center">
+            <div flex="100" class="padding-top8" layout="row" layout-align="space-between center" style="max-width:480px;">
             <img ng-src="{{shop.icon}}" title="Shop" width="48" class="md-avatar" style="margin-right:8px;">
             <div flex class="md-list-item-text">
               <h3>{{shop.name}}</h3>
@@ -110,6 +243,7 @@
             </div>
             </div>
             </div>
+            </div>
         </md-list-item>
       </md-list>
     </section>
@@ -118,5 +252,5 @@
  
             </md-content>
     </div>
-    
+
 </div>
