--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+::-webkit-scrollbar {
+        width: 0 !important;
+}
+html {
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
 .margin0 {
     margin: 0px;
 }
